Corrected alignment on edit review

--- a/public/style.css
+++ b/public/style.css
@@ -188,6 +188,6 @@ a {
 }
 
 .review_edit {
-	position: relative;
+	margin-right: 400px;
 }
 ​
